--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -4,6 +4,7 @@
 </head>
 
 <body>
-    <!--TODO-->
+    <div th:fragment="footer" style="float: right;">
+        &copy; 2020 ACI 
 </body>
 </html>
