--- a/src/main/resources/templates/editTea.html
+++ b/src/main/resources/templates/editTea.html
@@ -2,12 +2,17 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 	<meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
-	<title>Insert title here</title>
+    <title>Insert title here</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link href="../static/css/navbar.css" th:href="@{/css/navbar.css}" type="text/css" rel="stylesheet"/>
 </head>
 
 <body>
+    <div th:replace="fragments/headerAdmin.html :: header"></div>
+    <br>
 	<h3 th:text="|Editing Checked-In for (${checkIn.tea}) ${checkIn.school.name}|">Editing Checked-In for (000) InsertSchoolName</h3>
         <form action="#" th:action="@{/editCheckIn/{tea}(tea=${checkIn.tea})}" th:object="${checkIn}" method="POST">
+            <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
             <table>
                 <tr>
                     <td>Number of boxes:</td>
@@ -30,5 +35,6 @@
                 </tr>
             </table>
         </form>
+        <div th:replace="fragments/footer.html :: footer"></div>
 </body>
 </html>
